add direct url for db migrations

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DATABASE_URL=postgresql://postgres:[PASSWORD]@[HOST]:5432/pulseguard
+DATABASE_URL=postgresql://postgres.[REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
+DIRECT_URL=postgresql://postgres.[REF]:[PASSWORD]@db.[REF].supabase.co:5432/postgres
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=https://your-domain.com
 CRON_SECRET=
